app/assets/stylesheets/sections/listings/_search.scss
/* ... */
.search-filters {
  margin-top: 8px;
  font-size: 0.9em;

  .search-filter {
    position: relative;
    float: left;
    padding: 8px 8px;
    border: 1px solid $theme_white;
    border-radius: $default-border-radius;
    box-sizing: border-box;

    &:last-child {
      margin-right: 0px;
    }

    a {
      display: block;
    }

    ul {
      display: none;
      position: absolute;
      z-index: $map-z-index+1;
      left: -1px;
      top: 30px;
      overflow-y: auto;
      padding: 7px 0px;
      max-height: 200px;
      min-width: 100%;
      border: 1px solid $theme_white;
      border-radius: $default-border-radius;
      background: $theme_white;

      li {
        overflow: hidden;
        padding: 0px 8px;
        white-space: nowrap;
      }

      label {
        float: left;
        margin: 0px;
        padding-left: 0px 0px 0px 39px;
      }

      @media (max-width: $ipad-width) {
        top: 25px;
      }
    }

    &.filter-margin {
      margin: 0px 5px;
    }

    &.active {
      background: $theme_white;
    }

    @media (max-width: $ipad-width) {
      padding: 0 8px;
      height: 28px;
    }
  }

  h3 span {
    font-size: 0.8em;
    padding-right: 8px;
  }

}
.search__filter-row {
  margin-top: 50px;
}

/*** Listing View ***/
section.search section#category-tree {
  // margin-top: 145px;

  .span2 & {
    margin-top: 0;
  }

  .nav-item a.active {
    color: #5dbded;
    font-weight: 400;
  }

  .nav-item ul {
    margin-left: 20px;
  }
}

section.search section#results.list {
  margin-top: 120px;

  article.listing {
    @include box-sizing(border-box);
    float: left;
    position: relative;
    margin-top: 25px;
    background: $gray230;
    @include border-radius($border-radius-default);
    width: 22.9%;
    margin-left: 1%;
    margin-right: 1%;

    .tooltip-inner {
      text-align: left;
      max-width: none;
    }

    @media (max-width: $iphone-landscape) {
      width: 100%;
      margin-left: 0px;
      margin-right: 0px;
    }

    @media (min-width: $iphone-landscape) and (max-width: $ipad-width) {
      width: 46.9%;
      margin-left: 1.5%;
      margin-right: 1.5%;
    }

    @media (min-width: $ipad-width) and (max-width: $default-width) {
      width: 29.9%;
      margin-left: 1.5%;
      margin-right: 1.5%;
    }

    .heading {
      @include box-sizing(border-box);
      padding-top: 8px;
      padding-left: 10px;
      height: 74px;

      .company {
        color: $gray160;
      }

      .company,
      .name {
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }
    }

    .photo {
      @include box-sizing(border-box);
      z-index: -1;
      padding-right: 1px;

      img {
        width: 100%;
        display: block;
      }
    }

    .photo-container {
      position: relative;
    }

    .listing-google-map-wrapper {
      position: absolute;
      z-index: 5;
      display: none;
      top: 0px;
      left: 0px;
      width: 100%;
      height: 100%;

      a {
        position: absolute;
        z-index: 2;
        top: 5px;
        right: 10px;
      }

      .listing-google-map {
        width: 100%;
        height: 100%;
        padding-right: 1px;

        img {
          max-width: none;
        }

        .google-map-popover {

          .close {
            top: 0px;
            right: 10px;
            color: $theme_black;
          }
        }
      }
    }

    .info {
      @include box-sizing(border-box);
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
      height: 25%;
      color: $theme_white;
      font-size: 13px;
      @include background-image(linear-gradient(rgba(250, 250, 250, 0), $black));

      .miles,
      .price {
        position: absolute;
        bottom: 0;
        padding-left: 5px;
        padding-right: 5px;
      }

      .miles {
        left: 0;
      }

      .price {
        right: 0;
      }
    }
  }

  @media (max-width: $search-bar-breakpoint-desktop) {
    margin-top: 125px;
  }

  @media (max-width: $ipad-width) {
    margin-top: 0;
  }

}
/* ... */

